name:                HCM
version:             0.1.0
synopsis:            A Hearthstone Collection Manager

license:             MIT
license-file:        LICENSE
author:              Antoine Leblanc
maintainer:          crucuny@gmail.com

category:            Game
build-type:          Simple

cabal-version:       >=1.10

executable hcm
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base,
                     MissingH,
                     aeson,
                     ansi-terminal,
                     bytestring,
                     directory,
                     filepath,
                     http-conduit,
                     ixset,
                     mtl,
                     tabular,
                     text,
                     text-format,
                     transformers,
                     url,
                     vector
